add manual duration
